--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -14,16 +14,16 @@ spec:
   sds:
     enabled: false
   pilot:
-    image: "docker.io/istio/pilot:1.1.0-rc.4"
+    image: "docker.io/istio/pilot:1.1.0"
     replicaCount: 1
     minReplicas: 1
     maxReplicas: 5
     traceSampling: 1.0
   citadel:
-    image: "docker.io/istio/citadel:1.1.0-rc.4"
+    image: "docker.io/istio/citadel:1.1.0"
     replicaCount: 1
   galley:
-    image: "docker.io/istio/galley:1.1.0-rc.4"
+    image: "docker.io/istio/galley:1.1.0"
     replicaCount: 1
   gateways:
     ingress:
@@ -41,22 +41,22 @@ spec:
     k8singress:
       enabled: false
   mixer:
-    image: "docker.io/istio/mixer:1.1.0-rc.4"
+    image: "docker.io/istio/mixer:1.1.0"
     replicaCount: 1
     minReplicas: 1
     maxReplicas: 5
   sidecarInjector:
-    image: "docker.io/istio/sidecar_injector:1.1.0-rc.4"
+    image: "docker.io/istio/sidecar_injector:1.1.0"
     replicaCount: 1
     rewriteAppHTTPProbe: true
   nodeAgent:
     enabled: false
-    image: "docker.io/istio/node-agent-k8s:1.1.0-rc.4"
+    image: "docker.io/istio/node-agent-k8s:1.1.0"
   proxy:
-    image: "docker.io/istio/proxyv2:1.1.0-rc.4"
+    image: "docker.io/istio/proxyv2:1.1.0"
     enableCoreDump: false
   proxyInit:
-    image: "docker.io/istio/proxy_init:1.1.0-rc.4"
+    image: "docker.io/istio/proxy_init:1.1.0"
   defaultPodDisruptionBudget:
     enabled: true
   outboundTrafficPolicy:
