--- a/config/crds/istio_v1beta1_istio.yaml
+++ b/config/crds/istio_v1beta1_istio.yaml
@@ -98,6 +98,12 @@ spec:
                       type: object
                     serviceLabels:
                       type: object
+                    serviceType:
+                      enum:
+                      - ClusterIP
+                      - NodePort
+                      - LoadBalancer
+                      type: string
                   type: object
                 ingress:
                   properties:
@@ -121,6 +127,12 @@ spec:
                       type: object
                     serviceLabels:
                       type: object
+                    serviceType:
+                      enum:
+                      - ClusterIP
+                      - NodePort
+                      - LoadBalancer
+                      type: string
                   type: object
               type: object
             includeIPRanges:
