Istio control plane upgrade

--- a/docs/federation/example/echo-service.yml
+++ b/docs/federation/example/echo-service.yml
@@ -31,7 +31,8 @@ metadata:
   namespace: default
 spec:
   ports:
-  - port: 80
+  - name: http
+    port: 80
     targetPort: 8080
   selector:
     k8s-app: echo
