--- a/config/crds/istio_v1beta1_istio.yaml
+++ b/config/crds/istio_v1beta1_istio.yaml
@@ -324,6 +324,10 @@ spec:
               description: Use the Mesh Control Protocol (MCP) for configuring Mixer
                 and Pilot. Requires galley.
               type: boolean
+            version:
+              description: Contains the intended Istio version
+              pattern: ^1.1
+              type: string
             watchAdapterCRDs:
               description: Whether or not to establish watches for adapter-specific
                 CRDs
@@ -333,6 +337,7 @@ spec:
                 manages
               type: boolean
           required:
+          - version
           - mtls
           type: object
         status:
