--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -64,6 +64,11 @@ version="v1.4.7"
   revision = "0cd23ebeb6882bd1cdc2cb15fc7b2d72e8a86a5b"
 
 [[override]]
+  name = "k8s.io/apiserver"
+  # revision for tag "kubernetes-1.12.3"
+  revision = "92fdef3a232a23afb9644f6151119b5961b9feab"
+
+[[override]]
   name = "k8s.io/apimachinery"
   # revision for tag "kubernetes-1.12.3"
   revision = "eddba98df674a16931d2d4ba75edc3a389bf633a"
@@ -73,10 +78,23 @@ version="v1.4.7"
   # revision for tag "kubernetes-1.12.3"
   revision = "d082d5923d3cc0bfbb066ee5fbdea3d0ca79acf8"
 
+[[override]]
+  name = "k8s.io/kubernetes"
+  # revision for tag "kubernetes-1.12.3"
+  revision = "435f92c719f279a3a67808c80521ea17d5715c66"
+
+[[override]]
+  name = "github.com/russross/blackfriday"
+  revision = "300106c228d52c8941d4b3de6054a6062a86dda3"
+
 [[constraint]]
   name = "github.com/evanphx/json-patch"
   version = "4.1.0"
 
 [[constraint]]
   name = "k8s.io/helm"
-  version = "2.11.0"
+  version = "2.12.3"
+
+[[constraint]]
+  branch = "release-1.1"
+  name = "istio.io/api"
