Configurable operator wide ImagePullPolicy setting

--- a/config/crds/istio_v1beta1_istio.yaml
+++ b/config/crds/istio_v1beta1_istio.yaml
@@ -135,6 +135,14 @@ spec:
                       type: string
                   type: object
               type: object
+            imagePullPolicy:
+              description: ImagePullPolicy describes a policy for if/when to pull
+                a container image
+              enum:
+              - Always
+              - Never
+              - IfNotPresent
+              type: string
             includeIPRanges:
               description: IncludeIPRanges the range where to capture egress traffic
               type: string
