--- a/config/samples/istio_v1beta1_istio_cni.yaml
+++ b/config/samples/istio_v1beta1_istio_cni.yaml
@@ -9,5 +9,6 @@ spec:
   autoInjectionNamespaces:
   - "default"
   sidecarInjector:
+    enabled: true
     initCNIConfiguration:
       enabled: true
