--- a/config/samples/istio_v1beta1_istio_cni_gke.yaml
+++ b/config/samples/istio_v1beta1_istio_cni_gke.yaml
@@ -9,6 +9,7 @@ spec:
   autoInjectionNamespaces:
   - "default"
   sidecarInjector:
+    enabled: true
     initCNIConfiguration:
       enabled: true
       binDir: /home/kubernetes/bin
