--- a/config/samples/istio_v1beta1_remoteistio.yaml
+++ b/config/samples/istio_v1beta1_remoteistio.yaml
@@ -21,6 +21,8 @@ spec:
   - name: "zipkin"
     labelSelector: "app=jaeger"
   citadel:
+      enabled: true
       replicaCount: 1
   sidecarInjector:
+      enabled: true
       replicaCount: 1
