--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -12,6 +12,7 @@ spec:
   excludeIPRanges: ""
   autoInjectionNamespaces:
   - "default"
+  - "my0-namespace"
   controlPlaneSecurityEnabled: false
   sds:
     enabled: false
