--- a/config/samples/istio_v1beta1_istio_sds_auth.yaml
+++ b/config/samples/istio_v1beta1_istio_sds_auth.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   imageHub: "docker.io/istio"
   imageTag: "1.1.0"
-  mtls: true
+  mtls: false
   includeIPRanges: "*"
   excludeIPRanges: ""
   autoInjectionNamespaces:
