Auto sidecar injection policy configuration support

--- a/config/crds/istio_v1beta1_remoteistio.yaml
+++ b/config/crds/istio_v1beta1_remoteistio.yaml
@@ -115,6 +115,9 @@ spec:
             sidecarInjector:
               description: SidecarInjector configuration options
               properties:
+                defaultAutoInjection:
+                  description: This controls the 'policy' in the sidecar injector
+                  type: boolean
                 enabled:
                   type: boolean
                 image:
