--- a/config/crds/istio_v1beta1_istio.yaml
+++ b/config/crds/istio_v1beta1_istio.yaml
@@ -297,7 +297,7 @@ spec:
             sidecarInjector:
               description: SidecarInjector configuration options
               properties:
-                defaultAutoInjection:
+                autoInjectionPolicyEnabled:
                   description: This controls the 'policy' in the sidecar injector
                   type: boolean
                 enabled:
