--- a/config/crds/istio_v1beta1_remoteistio.yaml
+++ b/config/crds/istio_v1beta1_remoteistio.yaml
@@ -115,7 +115,7 @@ spec:
             sidecarInjector:
               description: SidecarInjector configuration options
               properties:
-                defaultAutoInjection:
+                autoInjectionPolicyEnabled:
                   description: This controls the 'policy' in the sidecar injector
                   type: boolean
                 enabled:
