--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -60,6 +60,7 @@ spec:
     image: "docker.io/istio/sidecar_injector:1.1.3"
     replicaCount: 1
     rewriteAppHTTPProbe: true
+    autoInjectionPolicyEnabled: true
   nodeAgent:
     enabled: false
     image: "docker.io/istio/node-agent-k8s:1.1.3"
@@ -74,5 +75,13 @@ spec:
     mode: ALLOW_ANY
   tracing:
     enabled: true
+    tracer: zipkin
     zipkin:
       address: zipkin.istio-system:9411
+    datadog:
+        address: $(HOST_IP):8126
+    lightstep:
+        address: lightstep-satellite.lightstep:9292
+        accessToken: <access-token>
+        secure: true
+        cacertPath: /etc/lightstep/cacert.pem
