--- a/config/crds/istio_v1beta1_istio.yaml
+++ b/config/crds/istio_v1beta1_istio.yaml
@@ -15,6 +15,10 @@ spec:
     description: Error message
     name: Error
     type: string
+  - JSONPath: .status.GatewayAddress
+    description: Ingress gateways of the resource
+    name: Gateways
+    type: string
   - JSONPath: .metadata.creationTimestamp
     name: Age
     type: date
