Configure gateway ports

--- a/config/crds/istio_v1beta1_istio.yaml
+++ b/config/crds/istio_v1beta1_istio.yaml
@@ -107,6 +107,10 @@ spec:
                     minReplicas:
                       format: int32
                       type: integer
+                    ports:
+                      items:
+                        type: object
+                      type: array
                     replicaCount:
                       format: int32
                       type: integer
@@ -142,6 +146,10 @@ spec:
                     minReplicas:
                       format: int32
                       type: integer
+                    ports:
+                      items:
+                        type: object
+                      type: array
                     replicaCount:
                       format: int32
                       type: integer
