--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -76,3 +76,7 @@ version="v1.4.7"
 [[constraint]]
   name = "github.com/evanphx/json-patch"
   version = "4.1.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/banzaicloud/k8s-objectmatcher"
