Configure loadBalancerIP for gateways

--- a/config/crds/istio_v1beta1_istio.yaml
+++ b/config/crds/istio_v1beta1_istio.yaml
@@ -101,6 +101,8 @@ spec:
                   properties:
                     enabled:
                       type: boolean
+                    loadBalancerIP:
+                      type: string
                     maxReplicas:
                       format: int32
                       type: integer
@@ -140,6 +142,8 @@ spec:
                   properties:
                     enabled:
                       type: boolean
+                    loadBalancerIP:
+                      type: string
                     maxReplicas:
                       format: int32
                       type: integer
