--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -36,6 +36,7 @@ spec:
       minReplicas: 1
       maxReplicas: 5
       serviceType: "LoadBalancer"
+      loadBalancerIP: ""
       serviceAnnotations: {}
       serviceLabels: {}
       ports:
