--- a/config/crds/istio_v1beta1_istio.yaml
+++ b/config/crds/istio_v1beta1_istio.yaml
@@ -55,12 +55,20 @@ spec:
             citadel:
               description: Citadel configuration options
               properties:
+                affinity:
+                  type: object
                 enabled:
                   type: boolean
                 image:
                   type: string
+                nodeSelector:
+                  type: object
                 resources:
                   type: object
+                tolerations:
+                  items:
+                    type: object
+                  type: array
               type: object
             controlPlaneSecurityEnabled:
               description: ControlPlaneSecurityEnabled control plane services are
@@ -84,21 +92,31 @@ spec:
             galley:
               description: Galley configuration options
               properties:
+                affinity:
+                  type: object
                 enabled:
                   type: boolean
                 image:
                   type: string
+                nodeSelector:
+                  type: object
                 replicaCount:
                   format: int32
                   type: integer
                 resources:
                   type: object
+                tolerations:
+                  items:
+                    type: object
+                  type: array
               type: object
             gateways:
               description: Gateways configuration options
               properties:
                 egress:
                   properties:
+                    affinity:
+                      type: object
                     enabled:
                       type: boolean
                     loadBalancerIP:
@@ -109,6 +127,8 @@ spec:
                     minReplicas:
                       format: int32
                       type: integer
+                    nodeSelector:
+                      type: object
                     ports:
                       items:
                         type: object
@@ -135,11 +155,17 @@ spec:
                       - NodePort
                       - LoadBalancer
                       type: string
+                    tolerations:
+                      items:
+                        type: object
+                      type: array
                   type: object
                 enabled:
                   type: boolean
                 ingress:
                   properties:
+                    affinity:
+                      type: object
                     enabled:
                       type: boolean
                     loadBalancerIP:
@@ -150,6 +176,8 @@ spec:
                     minReplicas:
                       format: int32
                       type: integer
+                    nodeSelector:
+                      type: object
                     ports:
                       items:
                         type: object
@@ -176,6 +204,10 @@ spec:
                       - NodePort
                       - LoadBalancer
                       type: string
+                    tolerations:
+                      items:
+                        type: object
+                      type: array
                   type: object
               type: object
             imagePullPolicy:
@@ -197,6 +229,8 @@ spec:
             mixer:
               description: Mixer configuration options
               properties:
+                affinity:
+                  type: object
                 enabled:
                   type: boolean
                 image:
@@ -207,11 +241,17 @@ spec:
                 minReplicas:
                   format: int32
                   type: integer
+                nodeSelector:
+                  type: object
                 replicaCount:
                   format: int32
                   type: integer
                 resources:
                   type: object
+                tolerations:
+                  items:
+                    type: object
+                  type: array
               type: object
             mtls:
               description: MTLS enables or disables global mTLS
@@ -219,12 +259,20 @@ spec:
             nodeAgent:
               description: NodeAgent configuration options
               properties:
+                affinity:
+                  type: object
                 enabled:
                   type: boolean
                 image:
                   type: string
+                nodeSelector:
+                  type: object
                 resources:
                   type: object
+                tolerations:
+                  items:
+                    type: object
+                  type: array
               type: object
             outboundTrafficPolicy:
               description: Set the default behavior of the sidecar for handling outbound
@@ -239,6 +287,8 @@ spec:
             pilot:
               description: Pilot configuration options
               properties:
+                affinity:
+                  type: object
                 enabled:
                   type: boolean
                 image:
@@ -249,11 +299,17 @@ spec:
                 minReplicas:
                   format: int32
                   type: integer
+                nodeSelector:
+                  type: object
                 replicaCount:
                   format: int32
                   type: integer
                 resources:
                   type: object
+                tolerations:
+                  items:
+                    type: object
+                  type: array
                 traceSampling:
                   format: float
                   type: number
@@ -310,6 +366,8 @@ spec:
             sidecarInjector:
               description: SidecarInjector configuration options
               properties:
+                affinity:
+                  type: object
                 autoInjectionPolicyEnabled:
                   description: This controls the 'policy' in the sidecar injector
                   type: boolean
@@ -319,6 +377,8 @@ spec:
                   type: string
                 initCNIConfiguration:
                   properties:
+                    affinity:
+                      type: object
                     binDir:
                       description: Must be the same as the environment’s --cni-bin-dir
                         setting (kubelet parameter)
@@ -343,6 +403,8 @@ spec:
                       description: Logging level for CNI binary
                       type: string
                   type: object
+                nodeSelector:
+                  type: object
                 replicaCount:
                   format: int32
                   type: integer
@@ -353,6 +415,10 @@ spec:
                     liveness health check to redirect request to sidecar. This makes
                     liveness check work even when mTLS is enabled.
                   type: boolean
+                tolerations:
+                  items:
+                    type: object
+                  type: array
               type: object
             tracing:
               description: Configuration for each of the supported tracers
