--- a/config/crds/istio_v1beta1_remoteistio.yaml
+++ b/config/crds/istio_v1beta1_remoteistio.yaml
@@ -55,12 +55,20 @@ spec:
             citadel:
               description: Citadel configuration options
               properties:
+                affinity:
+                  type: object
                 enabled:
                   type: boolean
                 image:
                   type: string
+                nodeSelector:
+                  type: object
                 resources:
                   type: object
+                tolerations:
+                  items:
+                    type: object
+                  type: array
               type: object
             enabledServices:
               description: EnabledServices the Istio component services replicated
@@ -112,6 +120,8 @@ spec:
             sidecarInjector:
               description: SidecarInjector configuration options
               properties:
+                affinity:
+                  type: object
                 autoInjectionPolicyEnabled:
                   description: This controls the 'policy' in the sidecar injector
                   type: boolean
@@ -121,6 +131,8 @@ spec:
                   type: string
                 initCNIConfiguration:
                   properties:
+                    affinity:
+                      type: object
                     binDir:
                       description: Must be the same as the environment’s --cni-bin-dir
                         setting (kubelet parameter)
@@ -145,6 +157,8 @@ spec:
                       description: Logging level for CNI binary
                       type: string
                   type: object
+                nodeSelector:
+                  type: object
                 replicaCount:
                   format: int32
                   type: integer
@@ -155,6 +169,10 @@ spec:
                     liveness health check to redirect request to sidecar. This makes
                     liveness check work even when mTLS is enabled.
                   type: boolean
+                tolerations:
+                  items:
+                    type: object
+                  type: array
               type: object
           required:
           - enabledServices
