--- a/config/crds/istio_v1beta1_remoteistio.yaml
+++ b/config/crds/istio_v1beta1_remoteistio.yaml
@@ -57,6 +57,8 @@ spec:
               properties:
                 affinity:
                   type: object
+                caSecretName:
+                  type: string
                 enabled:
                   type: boolean
                 image:
