--- a/config/samples/istio_v1beta1_istio.yaml
+++ b/config/samples/istio_v1beta1_istio.yaml
@@ -5,7 +5,7 @@ metadata:
     controller-tools.k8s.io: "1.0"
   name: istio-sample
 spec:
-  version: "1.1.6"
+  version: "1.1.7"
   mtls: false
   includeIPRanges: "*"
   excludeIPRanges: ""
@@ -16,17 +16,17 @@ spec:
     enabled: false
   pilot:
     enabled: true
-    image: "docker.io/istio/pilot:1.1.6"
+    image: "docker.io/istio/pilot:1.1.7"
     replicaCount: 1
     minReplicas: 1
     maxReplicas: 5
     traceSampling: 1.0
   citadel:
     enabled: true
-    image: "docker.io/istio/citadel:1.1.6"
+    image: "docker.io/istio/citadel:1.1.7"
   galley:
     enabled: true
-    image: "docker.io/istio/galley:1.1.6"
+    image: "docker.io/istio/galley:1.1.7"
     replicaCount: 1
   gateways:
     enabled: true
@@ -53,6 +53,7 @@ spec:
         - port: 15443
           targetPort: 15443
           name: tls
+      applicationPorts: ""
     egress:
       enabled: true
       replicaCount: 1
@@ -73,24 +74,24 @@ spec:
       enabled: false
   mixer:
     enabled: true
-    image: "docker.io/istio/mixer:1.1.6"
+    image: "docker.io/istio/mixer:1.1.7"
     replicaCount: 1
     minReplicas: 1
     maxReplicas: 5
   sidecarInjector:
     enabled: true
-    image: "docker.io/istio/sidecar_injector:1.1.6"
+    image: "docker.io/istio/sidecar_injector:1.1.7"
     replicaCount: 1
     rewriteAppHTTPProbe: true
     autoInjectionPolicyEnabled: true
   nodeAgent:
     enabled: false
-    image: "docker.io/istio/node-agent-k8s:1.1.6"
+    image: "docker.io/istio/node-agent-k8s:1.1.7"
   proxy:
-    image: "docker.io/istio/proxyv2:1.1.6"
+    image: "docker.io/istio/proxyv2:1.1.7"
     enableCoreDump: false
   proxyInit:
-    image: "docker.io/istio/proxy_init:1.1.6"
+    image: "docker.io/istio/proxy_init:1.1.7"
   defaultPodDisruptionBudget:
     enabled: true
   outboundTrafficPolicy:
