Add configurable default global and proxy resources
Add SDS fixes

--- a/config/crds/istio_v1beta1_remoteistio.yaml
+++ b/config/crds/istio_v1beta1_remoteistio.yaml
@@ -72,6 +72,10 @@ spec:
                     type: object
                   type: array
               type: object
+            defaultResources:
+              description: DefaultResources are applied for all Istio components by
+                default, can be overridden for each component
+              type: object
             enabledServices:
               description: EnabledServices the Istio component services replicated
                 to remote side
@@ -112,6 +116,8 @@ spec:
                   description: If set to true, istio-proxy container will have privileged
                     securityContext
                   type: boolean
+                resources:
+                  type: object
               type: object
             proxyInit:
               description: Proxy Init configuration options
