--- a/config/crds/istio_v1beta1_istio.yaml
+++ b/config/crds/istio_v1beta1_istio.yaml
@@ -88,6 +88,10 @@ spec:
                 enabled:
                   type: boolean
               type: object
+            defaultResources:
+              description: DefaultResources are applied for all Istio components by
+                default, can be overridden for each component
+              type: object
             excludeIPRanges:
               description: ExcludeIPRanges the range where not to capture egress traffic
               type: string
@@ -337,6 +341,8 @@ spec:
                   description: If set to true, istio-proxy container will have privileged
                     securityContext
                   type: boolean
+                resources:
+                  type: object
               type: object
             proxyInit:
               description: Proxy Init configuration options
