Support to set requested network name for gateways

--- a/config/crds/istio_v1beta1_istio.yaml
+++ b/config/crds/istio_v1beta1_istio.yaml
@@ -144,6 +144,8 @@ spec:
                     replicaCount:
                       format: int32
                       type: integer
+                    requestedNetworkView:
+                      type: string
                     resources:
                       type: object
                     sds:
@@ -197,6 +199,8 @@ spec:
                     replicaCount:
                       format: int32
                       type: integer
+                    requestedNetworkView:
+                      type: string
                     resources:
                       type: object
                     sds:
