Add ability to turn on/off pilot's sidecar container

--- a/config/base/crds/istio_v1beta1_istio.yaml
+++ b/config/base/crds/istio_v1beta1_istio.yaml
@@ -354,6 +354,8 @@ spec:
                   type: integer
                 resources:
                   type: object
+                sidecar:
+                  type: boolean
                 tolerations:
                   items:
                     type: object
