--- a/config/samples/istio_v1beta1_istio_minimal.yaml
+++ b/config/samples/istio_v1beta1_istio_minimal.yaml
@@ -11,10 +11,12 @@ spec:
   mtls: false
   autoInjectionNamespaces:
   - "default"
+  useMCP: false
   sds:
     enabled: false
   pilot:
     enabled: true
+    sidecar: false
   citadel:
     enabled: false
   galley:
