--- a/config/base/kustomization.yaml
+++ b/config/base/kustomization.yaml
@@ -18,24 +18,9 @@ namePrefix: istio-operator-
 # YAML string, with resources separated by document
 # markers ("---").
 resources:
+- crds/istio_v1beta1_istio.yaml
+- crds/istio_v1beta1_remoteistio.yaml
 - rbac/rbac_role.yaml
 - rbac/rbac_role_binding.yaml
 - manager/manager.yaml
-  # Comment the following 3 lines if you want to disable
-  # the auth proxy (https://github.com/brancz/kube-rbac-proxy)
-  # which protects your /metrics endpoint.
-- rbac/auth_proxy_service.yaml
-- rbac/auth_proxy_role.yaml
-- rbac/auth_proxy_role_binding.yaml
-
-patches:
-  # Protect the /metrics endpoint by putting it behind auth.
-  # Only one of manager_auth_proxy_patch.yaml and
-  # manager_prometheus_metrics_patch.yaml should be enabled.
-- manager_auth_proxy_patch.yaml
-  # If you want your controller-manager to expose the /metrics
-  # endpoint w/o any authn/z, uncomment the following line and
-  # comment manager_auth_proxy_patch.yaml.
-  # Only one of manager_auth_proxy_patch.yaml and
-  # manager_prometheus_metrics_patch.yaml should be enabled.
-#- manager_prometheus_metrics_patch.yaml
+- manager/namespace.yaml
