--- a/config/overlays/auth-proxy-enabled/kustomization.yaml
+++ b/config/overlays/auth-proxy-enabled/kustomization.yaml
@@ -4,6 +4,16 @@
 bases:
 - ../../base
 
+# Adds namespace to all resources.
+namespace: istio-system
+
+# Value of this field is prepended to the
+# names of all resources, e.g. a deployment named
+# "wordpress" becomes "alices-wordpress".
+# Note that it should also match with the prefix (text before '-') of the namespace
+# field above.
+namePrefix: istio-operator-
+
 resources:
 - rbac/auth_proxy_service.yaml
 - rbac/auth_proxy_role.yaml
