--- a/config/base/manager/manager.yaml
+++ b/config/base/manager/manager.yaml
@@ -36,7 +36,7 @@ spec:
       containers:
       - command:
         - /manager
-        image: banzaicloud/istio-operator:latest
+        image: banzaicloud/istio-operator:latest-1.1
         imagePullPolicy: Always
         name: manager
         env:
