Add missing rbac permission

--- a/config/base/rbac/rbac_role.yaml
+++ b/config/base/rbac/rbac_role.yaml
@@ -145,6 +145,12 @@ rules:
   - patch
   - delete
 - apiGroups:
+  - authentication.k8s.io
+  resources:
+  - tokenreviews
+  verbs:
+  - create
+- apiGroups:
   - istio.banzaicloud.io
   resources:
   - istios
