--- a/config/base/crds/istio_v1beta1_remoteistio.yaml
+++ b/config/base/crds/istio_v1beta1_remoteistio.yaml
@@ -137,6 +137,11 @@ spec:
                   type: boolean
                 image:
                   type: string
+                init:
+                  properties:
+                    resources:
+                      type: object
+                  type: object
                 initCNIConfiguration:
                   properties:
                     affinity:
