Add PSP support to helm chart and kustomize

--- a/deploy/charts/istio-operator/values.yaml
+++ b/deploy/charts/istio-operator/values.yaml
@@ -32,6 +32,11 @@ prometheusMetrics:
 ##
 rbac:
   enabled: true
+  ## Pod Security Policies
+  ## Ref: https://kubernetes.io/docs/concepts/policy/pod-security-policy/
+  ##
+  psp:
+    enabled: false
 
 nameOverride: ""
 fullnameOverride: ""
