--- a/deploy/charts/istio-operator/templates/operator-psp-basic.yaml
+++ b/deploy/charts/istio-operator/templates/operator-psp-basic.yaml
@@ -2,7 +2,7 @@
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: istio-operator.allow-all
+  name: {{ include "istio-operator.fullname" . }}-basic
   labels:
     app.kubernetes.io/name: {{ include "istio-operator.name" . }}
     helm.sh/chart: {{ include "istio-operator.chart" . }}
@@ -27,7 +27,7 @@ spec:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: psp:istio-operator.allow-all
+  name: psp:{{ include "istio-operator.fullname" . }}-basic
   labels:
     app.kubernetes.io/name: {{ include "istio-operator.name" . }}
     helm.sh/chart: {{ include "istio-operator.chart" . }}
@@ -39,7 +39,7 @@ rules:
 - apiGroups:
   - policy
   resourceNames:
-  - istio-operator.allow-all
+  - {{ include "istio-operator.fullname" . }}-basic
   resources:
   - podsecuritypolicies
   verbs:
@@ -48,7 +48,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: psp:istio-operator.allow-all
+  name: psp:{{ include "istio-operator.fullname" . }}-basic
   labels:
     app.kubernetes.io/name: {{ include "istio-operator.name" . }}
     helm.sh/chart: {{ include "istio-operator.chart" . }}
@@ -59,12 +59,33 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: psp:istio-operator.allow-all
+  name: psp:{{ include "istio-operator.fullname" . }}-basic
 subjects:
   - kind: ServiceAccount
-    name: statefulset-controller
-    namespace: kube-system
+    name: istio-citadel-service-account
+    namespace: {{ .Release.Namespace }}
   - kind: ServiceAccount
-    name: replicaset-controller
-    namespace: kube-system
+    name: istio-galley-service-account
+    namespace: {{ .Release.Namespace }}
+  - kind: ServiceAccount
+    name: istio-egressgateway-service-account
+    namespace: {{ .Release.Namespace }}
+  - kind: ServiceAccount
+    name: istio-ingressgateway-service-account
+    namespace: {{ .Release.Namespace }}
+  - kind: ServiceAccount
+    name: istio-mixer-service-account
+    namespace: {{ .Release.Namespace }}
+  - kind: ServiceAccount
+    name: istio-operator-authproxy
+    namespace: {{ .Release.Namespace }}
+  - kind: ServiceAccount
+    name: istio-pilot-service-account
+    namespace: {{ .Release.Namespace }}
+  - kind: ServiceAccount
+    name: istio-sidecar-injector-service-account
+    namespace: {{ .Release.Namespace }}
+  - kind: ServiceAccount
+    name: istio-operator-operator
+    namespace: {{ .Release.Namespace }}
 {{- end }}
