Add missing service account to psp binding

--- a/deploy/charts/istio-operator/templates/operator-psp-basic.yaml
+++ b/deploy/charts/istio-operator/templates/operator-psp-basic.yaml
@@ -86,6 +86,12 @@ subjects:
     name: istio-sidecar-injector-service-account
     namespace: {{ .Release.Namespace }}
   - kind: ServiceAccount
+    name: istiocoredns-service-account
+    namespace: {{ .Release.Namespace }}
+  - kind: ServiceAccount
+    name: istio-nodeagent-service-account
+    namespace: {{ .Release.Namespace }}
+  - kind: ServiceAccount
     name: istio-operator-operator
     namespace: {{ .Release.Namespace }}
 {{- end }}
