Update PSP config in kustomize

--- a/config/overlays/psp/resources/psp.yaml
+++ b/config/overlays/psp/resources/psp.yaml
@@ -1,7 +1,7 @@
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
 metadata:
-  name: istio-operator.allow-all
+  name: psp-basic
 spec:
   fsGroup:
     rule: RunAsAny
