--- a/config/overlays/psp/resources/psp_role.yaml
+++ b/config/overlays/psp/resources/psp_role.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: psp:istio-operator.allow-all
+  name: psp-basic
 rules:
 - apiGroups:
   - policy
   resourceNames:
-  - istio-operator.allow-all
+  - istio-operator-psp-basic
   resources:
   - podsecuritypolicies
   verbs:
